--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">I Am Poor</string>
+    <string name="title_message">I am <b>poor</b></string>
 </resources>
